[tool.poetry]
name = "dumbo-utils"
version = "0.4.0"
description = "Different utilities to be reused in other projects"
authors = ["Mario Alviano <mario.alviano@gmail.com>"]
readme = "README.md"
packages = [{include = "dumbo_utils"}]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
rich = "^14.3.2"
typer = "^0.23.1"
typeguard = "^4.0.0"
valid8 = "^5.1.2"
distlib = "^0.4.0"
dataclass-type-validator = "^0.1.2"

[tool.poetry.group.dev.dependencies]
coverage = "^7.1.0"
pytest = "^9.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
